# transaction-border-controller

./: 1  11-26-Scrum.md  Cargo.toml  LICENSE  README.md  fly.toml  railway.json  repo_tree.txt  test_output.txt
.anthropic/: goals.md  project.yaml
crates/coreprover-bridge/: Cargo.toml
crates/coreprover-zk/: Cargo.toml
crates/coreprover-zk/src/: lib.rs  zk_types.rs
crates/coreprover-zk/tests/: circuit_inputs.rs
crates/tbc-cli/: Cargo.toml
crates/tbc-cli/src/: config.rs  main.rs
crates/tbc-cli/src/commands/: escrow.rs  mod.rs  remote.rs
crates/tbc-core/: Cargo.toml
crates/tbc-core/benches/: codec_load_bench.rs  replay_bench.rs  sample_query.json  tgp_flow_bench.rs  tgp_flow_parallel.rs  tgp_throughput_harness.rs  tgp_validation_bench.rs
crates/tbc-core/src/: anomaly.rs  codec_tx.rs  gateway.rs  idempotency.js  lib.rs  protocol.rs  reservations.rs  rules.rs
crates/tbc-core/src/contracts/: factory.rs  mod.rs  receipt_vault.rs  settlement.rs  types.rs
crates/tbc-core/src/enforcement/: anomaly.rs  mod.rs  reservations.rs  rules.rs
crates/tbc-core/src/policy/: mod.rs  policy_hash.rs  policy_record.rs  session_keys.rs
crates/tbc-core/src/state/: clipboard.txt  merchant_store.rs  mod.rs  session_store.rs
crates/tbc-core/src/tgp/: decision.rs  messages.rs  mod.rs  policy.rs  state.rs  types.rs  validation.rs
crates/tbc-core/src/types/: tbc_rejection.rs  tbc_response.rs
crates/tbc-core/src/zk/: errors.rs  inputs.rs  mod.rs  proofs.rs  verifier.rs
crates/tbc-gateway/: Cargo.toml
crates/tbc-gateway/src/: gateway.rs  lib.rs  logging.rs  rewriter.rs  types.rs  validation.rs
crates/tbc-gateway/src/handlers/: error.rs  mod.rs  offer.rs  query.rs  settle.rs  settlement.rs  tgp_ack_handlers.rs  tgp_error_handler.rs  tgp_offer_handler.rs  tgp_query.rs  tgp_query_handler.rs  tgp_settle_handler.rs
crates/tbc-gateway/src/router/: inbound.rs  mod.rs  router.rs  tgp_routes.rs
crates/tbc-gateway/src/settlement/: mod.rs  tx_builders.rs
crates/tbc-gateway/src/signing/: tbc_signer.rs
crates/tbc-gateway/src/store/: memory.rs  mod.rs
crates/tbc-gateway/src/validation/: merchant.rs  mod.rs  policy_hash.rs
crates/tbc-gateway/src/workers/: mod.rs  session_cleanup.rs
crates/tbc-gateway/src/ws/: envelope.rs  handler.rs  mod.rs  router.rs  state.rs
crates/tbc-gateway/tests/: session_lifecycle_tests.rs
crates/tbc-gateway/ws/: envelope.rs  handler.rs  mod.rs  router.rs
crates/tbc-node/: Cargo.toml  app_state.rs  config.rs  errors.rs  health.rs  main.rs  routers.rs  rpc_adapters.rs
crates/tbc-node/admin/: auth.rs  commands.rs  mod.rs  routes.rs
crates/tbc-sdk/: Cargo.toml
crates/tbc-sdk/src/: client.rs  lib.rs
crates/tbc-sdk/src/builder/: escrow_builder.rs  mod.rs
docker/: Dockerfile.tbc-node  docker-compose.tbc.yml
docs/: README.md  Rebuild.md  TBC Design.key  architecture.md  context_summary.md  roadmap.md  system_topology.md
docs/docs/: 7daysprint#1.md  Architecture-drawing.md  MSG-Flows.md
docs/scrum/: 11-28-2025
docs/specs/: CoreProve-00.md  CoreProve-CP-UX-00.md  CoreProve-MER-UX-00.md  CoreProve-ZK-00.md  DKW-00.md  MCP-AUTO-PAY-01.1.md  (+8 more)
scripts/: cheatsheet.md  deploy-testnet  generate-bindings  setup-dev
spec/: TGP-00.md  buildout
tests/: integration_prover_flows.rs  integration_tgp_routing.rs
(+37 files in other folders)
