[package]
name = "coreprover-zk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ethers = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
sha2.workspace = true

[dev-dependencies]
proptest = { workspace = true }
