[package]
name = "coreprover-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "coreprover"
path = "src/main.rs"

[dependencies]
coreprover-bridge = { path = "../coreprover-bridge" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Remote admin
ed25519-dalek = "2.1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"