[package]
name = "tbc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
proptest = { workspace = true }