[package]
name = "tbc-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tbc-core = { path = "../tbc-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
chrono = "0.4"
ansi_term = "0.12"

[dev-dependencies]
proptest = { workspace = true }