[package]
name = "tbc-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tbc-node"
path = "main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"

# internal crates
tbc-core = { path = "../tbc-core" }
tbc-gateway = { path = "../tbc-gateway" }