[package]
name = "coreprover-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
coreprover-bridge = { path = "../coreprover-bridge" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }